# matrix-util-class

./: CMakeLists.txt  Exception.cpp  Exception.h  Matrix.cpp  Matrix.h  gausian.cpp  gausian.h  gausian_w.cpp  gausian_w.h  main.cpp  matrix_columns_operations.cpp  matrix_lines_operations.cpp  matrix_operators.cpp  matrix_util_functions.cpp
